added variable color

--- a/app/home/home.scss
+++ b/app/home/home.scss
@@ -10,6 +10,6 @@
 @media only screen and (max-width: 430px) {
   .wrapper{
     flex-direction: column;
-    background-color: red;
+    background-color: white;
   }
 }
