--- a/components/inboxComponent/inbox.css
+++ b/components/inboxComponent/inbox.css
@@ -3,8 +3,8 @@
   min-width: 20em;
   display: grid;
   grid-template-rows: 3rem 5rem auto;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
+  border-left: 1px solid #E5E7E9;
+  border-right: 1px solid #E5E7E9;
   padding: 0 1rem 0 1rem;
 }
 
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  background-color: rgb(230, 230, 230);
+  background-color: #ffffff;
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   border-radius: 0.5rem;
   width: 90%;
@@ -29,7 +29,7 @@
   border: none;
   width: 80%;
   background-color: transparent;
-  color: black;
+  color: #050e12;
 }
 
 .story {
@@ -50,7 +50,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 100%;
-  border: 2px solid rgb(2, 209, 255);
+  border: 2px solid #0773dd;
 }
 
 .story::-webkit-scrollbar {
@@ -83,7 +83,7 @@
   width: 3.4rem;
   height: auto;
   border-radius: 100%;
-  background-color: gray;
+  background-color: #E5E7E9;
 }
 .inbox-cover .inbox-content .box-inbox {
   width: 90%;
@@ -108,7 +108,7 @@
 .inbox-cover .inbox-content .box-inbox .content2 span {
   width: 1rem;
   height: 1rem;
-  background-color: rgb(49, 186, 255);
+  background-color: #0773dd;
   border-radius: 100%;
   text-align: center;
   color: white;
