--- a/components/inboxComponent/inbox.scss
+++ b/components/inboxComponent/inbox.scss
@@ -1,15 +1,26 @@
+$dark: #0a171e;
+$darker: #050e12;
+$light: #ffffff;
+$gray : #E5E7E9;
+$blue: #0773dd;
+$red: #ec5453;
+$green: #76ba68;
+
+
 .inbox-container {
   width: 30vw;
   min-width: 20em;
   display: grid;
   grid-template-rows: 3rem 5rem auto;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
+  border-left: 1px solid $gray;
+  border-right: 1px solid $gray;
   padding: 0 1rem 0 1rem;
+  
 }
 
+// search
 .search {
-  width: 100%;
+  width: 100%  ;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +30,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    background-color: rgb(230, 230, 230);
+    background-color: $light;
     padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     border-radius: 0.5rem;
     width: 90%;
@@ -30,17 +41,17 @@
     border: none;
     width: 80%;
     background-color: transparent;
-    color: black;
+    color: $darker;
   }
 }
 
+// story
 .story {
   width: 100%;
   overflow: auto;
 
   .content-story {
     width: fit-content;
-    // min-width: 200%;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -53,7 +64,7 @@
     width: 3rem;
     height: 3rem;
     border-radius: 100%;
-    border: 2px solid rgb(2, 209, 255);
+    border: 2px solid $blue;
   }
 }
 
@@ -61,6 +72,7 @@
   display: none;
 }
 
+// inbox
 .inbox-chat {
   width: 100%;
   overflow: auto;
@@ -87,7 +99,7 @@
       width: 3.4rem;
       height: auto;
       border-radius: 100%;
-      background-color: gray;
+      background-color: $gray;
     }
 
     .box-inbox {
@@ -114,7 +126,7 @@
         span {
           width: 1rem;
           height: 1rem;
-          background-color: rgb(49, 186, 255);
+          background-color:$blue;
           border-radius: 100%;
           text-align: center;
           color: white;
@@ -128,6 +140,7 @@
   .inbox-container {
     width: 100vw;
     height: 90vh;
+    
   }
 }
 
