--- a/components/sidebar/sidebar.scss
+++ b/components/sidebar/sidebar.scss
@@ -1,43 +1,51 @@
-.sidebar-container{
-    width: 10rem;
+$dark: #0a171e;
+$darker: #050e12;
+$light: #e5e7e9;
+$gray : #E5E7E9;
+$blue: #0773dd;
+$red: #ec5453;
+$green: #76ba68;
+
+.sidebar-container {
+  width: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
+.logo {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  margin-bottom: 5rem;
+
+  .logo-text {
+    font-size: 1rem;
+    margin: 0 0 5px 3px;
+  }
+}
+
+.nav {
+  width: 100%;
+
+  ul {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center ;
-}
+    gap: 1rem;
+    padding: 0 0.5rem 0 0.5rem;
 
-.logo{
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
-    align-items: flex-end;
-    width: 100%;
-    margin-bottom: 5rem;
-
-    .logo-text{
-        font-size: 1rem;
-        margin: 0 0 5px 3px;
+    li {
+      list-style: none;
+      width: 100%;
+      cursor: pointer;  
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      padding-left: 10px;
+      align-items: center;
     }
-}
-
-
-.nav{
-    width: 100%;
-
-    ul{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        padding: 0 .5rem 0 .5rem;
-
-        li{
-            list-style: none;
-            width: 100%;
-            cursor: pointer;
-            display: flex;
-            flex-direction: row;
-            gap: 1rem;
-            padding-left: 10px;
-        }
-    }
+  }
 }
